RESOLVED FIXED201528
REGRESSION (iOS 13): If an overflow:hidden with a non-zero scroll position is toggled to overflow:scroll, some other scroll causes its scroll position to get reset
https://bugs.webkit.org/show_bug.cgi?id=201528
Summary REGRESSION (iOS 13): If an overflow:hidden with a non-zero scroll position is...
Simon Fraser (smfr)
Reported 2019-09-05 18:17:49 PDT
REGRESSION (iOS 13): If an overflow:hidden with a non-zero scroll position is toggled to overflow:scroll, some other scroll causes its scroll position to get reset
Attachments
Patch (8.15 KB, patch)
2019-09-05 18:20 PDT, Simon Fraser (smfr)
no flags
Patch (8.37 KB, patch)
2019-09-05 21:00 PDT, Simon Fraser (smfr)
fred.wang: review+
Simon Fraser (smfr)
Comment 1 2019-09-05 18:20:24 PDT
Simon Fraser (smfr)
Comment 2 2019-09-05 18:20:26 PDT
Simon Fraser (smfr)
Comment 3 2019-09-05 21:00:03 PDT
Frédéric Wang Nélar
Comment 4 2019-09-06 00:54:34 PDT
Comment on attachment 378155 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=378155&action=review > Source/WebCore/ChangeLog:9 > + If an, when an overflow scrolling node is created, the scroller has non-zero scroll Problem in this first sentence?
Simon Fraser (smfr)
Comment 5 2019-09-06 11:06:26 PDT
Simon Fraser (smfr)
Comment 6 2019-10-18 10:40:06 PDT
*** Bug 203110 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.