Cherry-pick r249581. rdar://problem/55202922

REGRESSION (iOS 13): If an overflow:hidden with a non-zero scroll position is toggled to overflow:scroll, some other scroll causes its scroll position to get reset
    https://bugs.webkit.org/show_bug.cgi?id=201528
    rdar://problem/55044885

    Reviewed by Frédéric Wang.
    Source/WebCore:

    If, when an overflow scrolling node is created, the scroller has non-zero scroll
    position (for example, via toggling to overflow:hidden, setting scrollTop, then toggling
    to overflow:scroll), then on the next update its scroll position will reset back to zero.

    The bug was that newly created ScrollingTreeScrollingNodes didn't set m_currentScrollPosition
    to the scroll position coming from the state node, so a subsequent update could cause
    the 0,0 currentScrollPosition to get applied. If we're making a new node, and there's no
    requestedScrollPosition, then initialize m_currentScrollPosition.

    Test: scrollingcoordinator/ios/scroller-initial-scroll-position.html

    * page/scrolling/ScrollingTreeScrollingNode.cpp:
    (WebCore::ScrollingTreeScrollingNode::commitStateBeforeChildren):
    (WebCore::ScrollingTreeScrollingNode::commitStateAfterChildren):
    * page/scrolling/ScrollingTreeScrollingNode.h:

    LayoutTests:

    * scrollingcoordinator/ios/scroller-initial-scroll-position-expected.html: Added.
    * scrollingcoordinator/ios/scroller-initial-scroll-position.html: Added.

    Canonical link: https://commits.webkit.org/215180@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249581 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.340@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@249696 268f45cc-cd09-0410-ab3c-d52691b4dbfc